[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Sky/Shooter_bg_raster.png" type="Texture" id=1]
[ext_resource path="res://assets/Grass/grass_00.png" type="Texture" id=2]
[ext_resource path="res://assets/Grass/grass_00_shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/Pointers/pointer_00/pointer_00.png" type="Texture" id=4]
[ext_resource path="res://assets/Pointers/pointer_00/pointer_00_on_hit-default.png" type="Texture" id=5]
[ext_resource path="res://scripts/LevelSetup/00_Demo_level.gd" type="Script" id=6]
[ext_resource path="res://scripts/Pointers/pointer_00_on_mouse_down_particle2D.gd" type="Script" id=7]
[ext_resource path="res://godot_specific_misc_util/on_fire_size_interp_curve_particle_2D.tres" type="Curve" id=8]
[ext_resource path="res://assets/Pointers/pointer_01/pointer_01.png" type="Texture" id=9]
[ext_resource path="res://assets/Pointers/pointer_01/pointer_01_on_hit-default.png" type="Texture" id=10]
[ext_resource path="res://scripts/Pointers/pointer_01_on_RT_pressed_particle2D.gd" type="Script" id=11]
[ext_resource path="res://assets/Targets/target_00/target_00-on_hit.png" type="Texture" id=12]
[ext_resource path="res://assets/Targets/target_00/target_00-post_hit.png" type="Texture" id=13]
[ext_resource path="res://assets/Targets/target_00/target_00-default.png" type="Texture" id=14]
[ext_resource path="res://scripts/Targets/Target_Bullseye_Area2D.gd" type="Script" id=15]
[ext_resource path="res://scripts/Pointers/Pointer00Area2D.gd" type="Script" id=16]
[ext_resource path="res://Pointer01Area2D.gd" type="Script" id=17]
[ext_resource path="res://assets/ScoreUi/avatar_00.png" type="Texture" id=18]
[ext_resource path="res://assets/ScoreUi/score_area_rect.png" type="Texture" id=19]
[ext_resource path="res://fonts/Open_Sans/static/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/ScoreUi/avatar_01.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "postHit",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "isHit",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 98.0

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 20 )

[sub_resource type="CircleShape2D" id=3]
radius = 45.0

[sub_resource type="CircleShape2D" id=4]
radius = 45.0

[node name="00_Demo_level" type="Node"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="ShooterBgRaster" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Shooting_gallery_config_00" type="Node" parent="."]

[node name="Target_Bullseye_Area2D" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 164, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D2" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 429, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D2"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D2"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D3" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 694, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D3"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D3"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D4" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 959, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D4"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D4"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D5" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1224, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D5"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D5"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D6" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1489, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D6"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D6"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D7" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1754, 164 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D7"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D7"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D8" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 164, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D8"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D8"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D9" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 429, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D9"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D9"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D10" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 694, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D10"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D10"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D11" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 959, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D11"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D11"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D12" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1224, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D12"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D12"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D13" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1489, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D13"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D13"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D14" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1754, 429 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D14"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D14"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D15" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 164, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D15"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D15"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D16" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 429, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D16"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D16"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D17" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 694, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D17"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D17"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D18" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 959, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D18"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D18"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D19" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1224, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D19"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D19"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D22" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 694, 959 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D22"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D22"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D23" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 959, 959 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D23"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D23"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D24" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1224, 959 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D24"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D24"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D20" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1489, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D20"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D20"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Target_Bullseye_Area2D21" type="Area2D" parent="Shooting_gallery_config_00"]
position = Vector2( 1754, 694 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D21"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "postHit"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting_gallery_config_00/Target_Bullseye_Area2D21"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Grass_static" type="Node" parent="."]

[node name="grass_bot_left_shadow" type="Sprite" parent="Grass_static"]
position = Vector2( 252, 961 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="grass_bot_left" type="Sprite" parent="Grass_static"]
position = Vector2( 246, 961 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="grass_bot_right_shadow" type="Sprite" parent="Grass_static"]
position = Vector2( 1673, 961 )
rotation = -3.14159
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 3 )

[node name="grass_bot_right" type="Sprite" parent="Grass_static"]
position = Vector2( 1673, 961 )
rotation = -3.14159
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 2 )

[node name="ScoreUI" type="Node" parent="."]

[node name="Pointer00Avatar" type="Sprite" parent="ScoreUI"]
position = Vector2( 164, 799 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="Pointer00ScoreAreaBg" type="Sprite" parent="ScoreUI"]
position = Vector2( 258, 976 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )

[node name="Pointer00Score" type="Label" parent="ScoreUI"]
margin_left = 71.0
margin_top = 932.0
margin_right = 447.0
margin_bottom = 1015.0
custom_colors/font_color = Color( 0.223529, 0.176471, 0.207843, 1 )
custom_fonts/font = SubResource( 5 )
text = "Blue Score"

[node name="Pointer01Avatar" type="Sprite" parent="ScoreUI"]
position = Vector2( 1756, 799 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[node name="Pointer01ScoreAreaBg" type="Sprite" parent="ScoreUI"]
position = Vector2( 1652, 976 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )

[node name="Pointer01Score" type="Label" parent="ScoreUI"]
margin_left = 1464.0
margin_top = 932.0
margin_right = 1840.0
margin_bottom = 1015.0
custom_colors/font_color = Color( 0.223529, 0.176471, 0.207843, 1 )
custom_fonts/font = SubResource( 5 )
text = "Red Score"
align = 2

[node name="Pointer00Area2D" type="Area2D" parent="."]
position = Vector2( 424, 442 )
script = ExtResource( 16 )

[node name="Pointer00" type="Sprite" parent="Pointer00Area2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Pointer00HitArea" type="CollisionShape2D" parent="Pointer00Area2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Pointer01Area2D" type="Area2D" parent="."]
position = Vector2( 1384, 841 )
script = ExtResource( 17 )

[node name="Pointer01" type="Sprite" parent="Pointer01Area2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Pointer01HitArea" type="CollisionShape2D" parent="Pointer01Area2D"]
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="pointer_00_on_mouse_down_particle2D" type="CPUParticles2D" parent="."]
position = Vector2( -1015, -205 )
emitting = false
amount = 1
lifetime = 0.1
randomness = 0.6
texture = ExtResource( 5 )
angular_velocity_random = 0.25
angle = 360.0
angle_random = 1.0
scale_amount_curve = ExtResource( 8 )
script = ExtResource( 7 )

[node name="pointer_01_on_RT_particle2D" type="CPUParticles2D" parent="."]
position = Vector2( -958, 267 )
emitting = false
amount = 1
lifetime = 0.1
randomness = 0.6
texture = ExtResource( 10 )
angle = 360.0
angle_random = 1.0
scale_amount_curve = ExtResource( 8 )
script = ExtResource( 11 )

[node name="Debug_FPS_counter" type="Label" parent="."]
margin_left = 1798.0
margin_top = 1057.0
margin_right = 1909.0
margin_bottom = 1071.0
text = "FPS Appears here"
align = 2
